# ripeg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  index.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
benches/: charset_bench.rs
benchmarks/: isa.rs  main.rs
src/: lib.rs
src/charset/: mod.rs
src/isa/: mod.rs
